# HAFR_aps360_project

./: .gitignore  Dataset.py  HAFR.py  LDA.py  README.md  main_nov03 (1).py  pyproject.toml  pytorch_HAFR.py
GNN/: gat.py  prepare_graph.py  train_gat.py
configs/: config.yaml
configs/hyperparameters/: default.yaml  tuning.yaml
data_collection/: api.py  get_recipe_content.py  get_recipe_list.py  parsed_ingredients.txt  scrap_html_text.ipynb
encoder/image_encoder/: fine_tune_vit.py  get_image_embeddings.py  prepare_dataset.py
fine_tuning_clip/: fine_tuning_clip.py  python_env.txt  requirements.txt  test.ipynb
save/: losses_per_epoch_13.npy
