[tool.poetry]
name = "hafr-aps360-project"
version = "0.1.0"
description = ""
authors = ["TokuyuSou <soutokuyu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
scipy = "^1.14.1"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
