[tool.poetry]
name = "hafr-aps360-project"
version = "0.1.0"
description = ""
authors = ["TokuyuSou <soutokuyu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
scipy = "^1.14.1"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
python-allrecipes = "^0.3.1"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
datasets = "^3.1.0"
transformers = "^4.46.3"
pillow = "^11.0.0"
matplotlib = "^3.9.2"
torchvision = "^0.20.1"
accelerate = "^1.1.1"
google-api-python-client = "^2.153.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
